--- a/src/Components/home/Home.css
+++ b/src/Components/home/Home.css
@@ -32,7 +32,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  background-image: url("/assets/home.webp");
+  background-image: url("/assets/home.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -64,7 +64,7 @@
 .intro2 {
   display: flex;
   width: 100%;
-  background-image: url("/assets/intro2BG.webp");
+  background-image: url("/assets/intro2BG.png");
   background-repeat: no-repeat;
   background-size: 100% 100%;
   padding: 5rem 4rem 6rem 6rem;
