--- a/src/Components/home/objectives/Objectives.css
+++ b/src/Components/home/objectives/Objectives.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  background-image: url("/assets/objective.webp");
+  background-image: url("/assets/objective.png");
   background-repeat: no-repeat;
   background-size: 100% 100%;
   padding: 4rem;
