--- a/src/Components/home/notice/Notice.css
+++ b/src/Components/home/notice/Notice.css
@@ -89,8 +89,8 @@
 
   .noticeBox img {
     width: 100%;
-    border-bottom-left-radius: 10px;
-    border-top-right-radius: 0;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
   }
 
   .noticeContainer {
