--- a/src/Components/propuesta/Propuesta.css
+++ b/src/Components/propuesta/Propuesta.css
@@ -7,9 +7,9 @@
   background-color: #f4f4f4;
 }
 
-.propformsBG{
-    width: 100%;
-    background-color: #fff;
+.propformsBG {
+  width: 100%;
+  background-color: #fff;
 }
 
 .propintro {
@@ -19,6 +19,7 @@
   color: #000;
   min-height: 90vh;
   justify-content: center;
+  text-align: justify;
 }
 
 .propintro h1 {
@@ -109,9 +110,9 @@
   /* align-items: center; */
   margin-bottom: 2rem;
 }
-.propForms{
-    background-size: 100% 100%;
-    background-image: url("/assets/certificate1.png");
+.propForms {
+  background-size: 100% 100%;
+  background-image: url("/assets/certificate1.png");
 }
 
 .propForms1 {
@@ -140,6 +141,7 @@
   width: 100%;
   justify-content: space-between;
   /* align-items: flex-start; */
+  gap: 2rem;
 }
 
 .formbox-page {
@@ -147,7 +149,7 @@
   flex-direction: column;
   background-color: #fff;
   color: #000;
-  width: 60%;
+  width: 700px;
   min-height: 390px;
 }
 
@@ -161,7 +163,7 @@
 .formbox-nav button {
   /* color: #b0344c; */
   width: -webkit-fill-available;
-  padding: 20px 0;
+  height: 60px;
   font-weight: 600;
   border-radius: 0;
 }
@@ -184,7 +186,7 @@
 .formbox-text p {
   margin-top: 0;
 }
-.formbox-text-inner {
+.formbox-text-inner, .formbox-text-inner1 {
   display: flex;
   align-items: end;
   justify-content: space-between;
@@ -201,35 +203,138 @@
 
 .form {
   display: flex;
-  /* height: 350px; */
-}
-.from iframe {
-  border: none;
 }
 
+.fti1 {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
 
-.fti1{
-    display: flex;
+.fti2 {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.fti1-text {
+  display: flex;
+  gap: 0.6rem;
+}
+.fti1-text div img {
+  width: 28px;
+}
+.fti1-text div h5 {
+  margin: 0;
+}
+.fti1-text div ul {
+  margin: 0;
+  padding-left: 5px;
+}
+
+@media only screen and (max-width: 1200px) {
+  .formbox-content {
     flex-direction: column;
-    gap: 1rem;
+    align-items: center;
+  }
+  .formbox-page {
+    width: 100%;
+  }
+  .form iframe {
+    width: 100%;
+  }
 }
 
-.fti2{
-    display: flex;
+@media only screen and (max-width: 840px) {
+  .propintro h1 {
+    text-align: center;
+    font-size: 22px;
+  }
+  .propintro p {
+    font-size: 16px;
+  }
+
+  .propintro2 {
     flex-direction: column;
-    gap: 2rem;
-}
+    background-image: url("/assets/propintro2partM.png");
+    width: 90%;
+    /* padding: 2rem; */
+    gap: 6rem;
+  }
+  .pi2p1-box {
+    width: 242px;
+    min-height: 56px;
+  }
+  .pi2p1-box h3 {
+    font-size: 14px;
+  }
 
-.fti1-text{
-    display: flex;   
-    gap: 0.6rem;
-}
-.fti1-text div img{
-    width: 28px;
-}
+  .pi2p2-box h4 {
+    font-size: 14px;
+  }
+  .pi2p2-box p {
+    font-size: 12px;
+  }
+  .pi2p2-box img {
+    width: 126px;
+  }
+
+
+  .formbox{
+    width: 90%;
+  }
+  .formbox h1 {
+    font-size: 26px;
+  }
+  .formbox h2 {
+    font-size: 18px;
+  }
+
+  .formbox-nav button {
+    font-size: 10px;
+    font-weight: 800;
+  }
+  .formbox-page{
+    text-align: justify;
+  }
+  .formbox-text{
+    padding: 1rem;
+  }
+  .formbox-text p, .formbox-text ul {
+    font-size: 12px;
+    line-height: 14px;
+  }
+  .formbox-text h4{
+    font-size: 14px;
+  }
+  .formbox-text ul{
+    padding-left: 8px;
+  }
 .fti1-text div h5{
-    margin: 0;
+  font-size: 15px;
 }
-.fti1-text div ul{
-    margin: 0;
+  .plan{
+    font-size: 8px;
+    height: 32px;
+    border-radius: 5px;
+  }
+.formbox-text-inner1{
+  align-items: center;
+}
+  .formbox-text-inner{
+    flex-direction: column;
+    align-items: center;
+  }
+  .fti2{
+    flex-direction: row;
+  }
+
+  .propForms{
+    background-image: url("/assets/certificate1M.png");
+  }
+  .propForms1{
+    background-image: url("/assets/certificateM.png");
+  }
+
+  
 }
