--- a/src/Components/comunidad/Comunidad.css
+++ b/src/Components/comunidad/Comunidad.css
@@ -124,6 +124,7 @@
   margin-top: 4rem;
   margin-bottom: 2rem;
   text-align: center;
+  color: #000;
 }
 
 .comunidadBoxes {
@@ -160,6 +161,7 @@
 
 .comunidadBoxText {
   background-color: #e6e6e6;
+  color: #000;
   width: 700px;
   padding: 2rem 2rem 1rem 2rem;
 }
