--- a/src/Components/institute/Institute.css
+++ b/src/Components/institute/Institute.css
@@ -261,7 +261,7 @@
   justify-content: space-between;
 }
 
-.funboxImg {
+.funboxImg, .funboxImg1 {
   width: 40%;
 }
 
@@ -375,6 +375,10 @@
 .funboxImg{
   width: 100%;
 }
+.funboxImg1{
+  width: 100%;
+  height: 500px;
+}
 .funbox-texts{
   width: 100%;
 }
@@ -471,4 +475,11 @@ font-size: 16px;
 .rabox1{
   width: 80%;
 }
+
+}
+
+@media only screen and (max-width: 420px) {
+  .funboxImg1{
+    height: 310px;
+  }
 }
