--- a/src/index.css
+++ b/src/index.css
@@ -18,11 +18,12 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: inherit;
   text-decoration: inherit;
+  width: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: inherit;
 }
 
 *,
