--- a/src/Components/comunidad/Comunidad.css
+++ b/src/Components/comunidad/Comunidad.css
@@ -182,6 +182,10 @@
   line-height: 2.5;
 }
 
+.formacion{
+  width: 100% !important;
+}
+
 @media only screen and (max-width: 1260px) {
   .directorsProfile {
     width: 100%;
