--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ a {
   font-weight: 500;
   color: inherit;
   text-decoration: inherit;
-  width: inherit;
+  /* width: inherit; */
 }
 a:hover {
   color: inherit;
