--- a/src/Components/propuesta/Propuesta.css
+++ b/src/Components/propuesta/Propuesta.css
@@ -335,6 +335,7 @@
     font-size: 8px;
     height: 32px;
     border-radius: 5px;
+    color: #fff;
   }
   .formbox-text-inner1 {
     align-items: center;
