--- a/src/Components/home/Home.css
+++ b/src/Components/home/Home.css
@@ -24,8 +24,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  overflow: visible;
+  /* overflow: visible; */
   position: sticky;
+  z-index: -4;
 }
 
 .intro {
