--- a/src/Components/institute/Institute.css
+++ b/src/Components/institute/Institute.css
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
   background-image: url("/assets/instituteIntro.png");
-  background-size: 100% 100%;
+  background-size: cover;
   min-height: 90vh;
   color: #fff;
   justify-content: end;
@@ -397,6 +397,7 @@
   }
   .instituteIntro{
     background-image: url("/assets/instituteIntroM.png");
+    background-size: 100% 100%;
   }
 .iipart1, .iipart2{
   width: 85%;
