--- a/src/Components/propuesta/Propuesta.css
+++ b/src/Components/propuesta/Propuesta.css
@@ -33,6 +33,7 @@
   font-size: 22px;
   font-weight: 600;
   margin-bottom: 0;
+  /* text-align: justify; */
 }
 
 .propintro2BG {
@@ -129,7 +130,7 @@
 }
 
 .formbox h1 {
-  font-size: 68px;
+  font-size: 41px;
   font-weight: 800;
   margin-bottom: 1rem;
 }
