--- a/src/index.css
+++ b/src/index.css
@@ -37,7 +37,7 @@ body {
   display: flex;
   min-width: 320px;
   min-height: 100vh;
-  background-color: #fff;
+  /* background-color: #fff; */
   overflow-x: hidden;
   color: #000;
 }
