--- a/src/Components/propuesta/Propuesta.css
+++ b/src/Components/propuesta/Propuesta.css
@@ -130,7 +130,7 @@
 }
 
 .formbox h1 {
-  font-size: 41px;
+  font-size: 68px;
   font-weight: 800;
   margin-bottom: 1rem;
 }
@@ -181,9 +181,9 @@
   padding: 2rem;
 }
 
-.formbox-text h4 {
+.formbox-text h5 {
   margin-bottom: 0;
-  font-weight: 800;
+  /* font-weight: 800; */
 }
 .formbox-text p {
   margin-top: 0;
@@ -235,6 +235,22 @@
 .fti1-text div ul {
   margin: 0;
   padding-left: 5px;
+}
+
+
+@media only screen and (max-width: 1250px) {
+.propintro2{
+  width: 710px;
+  padding: 2rem;
+}
+
+.pi2p1-box{
+  min-height: 75px;
+  width: 250px;
+}
+.pi2p1-box h3{
+  font-size: 16px;
+}
 }
 
 @media only screen and (max-width: 1200px) {
